--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
         <div class="background-image">
             <div class="rectangle"> 
                 <h2>DOG TRAINNING</h2>
-            <H1>Courses</H1>
-            <P>Whether you have a young pup, older dog or a <br> rescue, PetSmart training classes can help them <br> learn how to behave appropriately at home and <br> on-the-go.</P>
-             <div class="bouton">
-                <a href="#" class="monboutton"> LEARN MORE</a>
-            </div>    
-        </div>
-            <img src="smin (1).jpg" alt="" width="1349" height="550">
+                <H1>Courses</H1>
+                <P>Whether you have a young pup, older dog or a <br> rescue, PetSmart training classes can help them <br> learn how to behave appropriately at home and <br> on-the-go.</P>
+                <div class="bouton">
+                    <a href="#" class="monboutton"> LEARN MORE</a>
+                </div>    
+            </div>
+            <div class="naby">
+                <img src="smin (1).jpg" alt="image chiot">
+            </div>
         </div>
     </section>
     <footer>
