--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>    
             </div>
             <div class="naby">
-                <img src="smin(1).jpg" alt="image chiot">
+                <img src="chiot.jpg" alt="image chiot">
             </div>
         </div>
     </section>
