--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </header>
     
     <section class="main-section">
-        <div class="background-image">
             <div class="rectangle"> 
                 <h2>DOG TRAINNING</h2>
                 <H1>Courses</H1>
@@ -41,12 +40,16 @@
                 <img src="chiot.jpg" alt="image chiot">
             </div>
         </div>
-    </section>
+    
     <footer>
-        <div class="footer-content">
-            <p>&copy; Sample text. Click to select the text box. <br> Click again or double  </p>
-            <P> click to start editing the text. </P>
+        <div class="footer-anna">
+          <p>Sample text. Click to select the text box. Click again or double</p>
+          <P>click to start editing the text.</P> <br>
+          <div class="link">
+             <a href=""> Template </a> créé avec <a href=""> nice page </a>
+           </div>
         </div>
-    </footer>
+      </footer>
+    </section>
 </body>
 </html>
